tools/flowc/tests/errors/aux_sources/for_error21.flow
// Test on unused export detection.

export {
	used_exfunc(a : int) -> int;
	used_exvar : int;
	unused_exfunc(a : int) -> int;
	unused_exvar : int;
}

used_exfunc(a : int) { used_locfunc(a) + 1 }
used_exvar = 5;
used_locfunc(x : int) { x + x }

unused_exfunc(a : int) { used_locfunc(a) + unused_locfunc(2) }
unused_exvar = unused_locfunc(6);
unused_locfunc(x : int) { x * x }
